# SlicerHippunfold

./: CMakeLists.txt  README.md
GiftiLoader/: GiftiLoader.py
GiftiLoader/Resources/Config/: config.yml
GiftiLoader/Resources/Data/Test/sub-P022/surf/: sub-P022_hemi-L_space-T1w_den-0p5mm_label-hipp_midthickness.surf.gii  sub-P022_hemi-R_space-T1w_den-0p5mm_label-hipp_midthickness.surf.gii  sub-P023_hemi-L_space-T1w_den-0p5mm_label-hipp_atlas-bigbrain_subfields.label.gii  sub-P023_hemi-L_space-T1w_den-0p5mm_label-hipp_curvature.shape.gii  sub-P023_hemi-L_space-T1w_den-0p5mm_label-hipp_gyrification.shape.gii  sub-P023_hemi-L_space-T1w_den-0p5mm_label-hipp_surfarea.shape.gii  sub-P023_hemi-L_space-T1w_den-0p5mm_label-hipp_thickness.shape.gii  sub-P023_hemi-R_space-T1w_den-0p5mm_label-hipp_atlas-bigbrain_subfields.label.gii  sub-P023_hemi-R_space-T1w_den-0p5mm_label-hipp_curvature.shape.gii  sub-P023_hemi-R_space-T1w_den-0p5mm_label-hipp_gyrification.shape.gii  sub-P023_hemi-R_space-T1w_den-0p5mm_label-hipp_surfarea.shape.gii  sub-P023_hemi-R_space-T1w_den-0p5mm_label-hipp_thickness.shape.gii
HippSlicer/: CMakeLists.txt  GiftiLoader.py  HippSlicer.py
HippSlicer/Resources/Config/: config.yml
HippSlicer/Resources/UI/: GiftiLoader.ui  HippSlicer.ui
ImportGifti/: CMakeLists.txt  ImportGifti.py
ImportGifti/Resources/Config/: config.yml
ImportGifti/Resources/UI/: backup
